--- a/package.json
+++ b/package.json
@@ -183,6 +183,8 @@
     "@types/node": "14.14.10",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.9",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-test-renderer": "^16.9.3",
     "@types/webpack-env": "^1.15.2",
@@ -201,6 +203,7 @@
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
     "detect-port": "^1.3.0",
+    "ejs": "^3.1.6",
     "electron": "^11.0.1",
     "electron-builder": "^22.10.5",
     "electron-devtools-installer": "^3.1.1",
@@ -248,13 +251,18 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-saga": "^1.1.3",
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19"
   },
